force-app/main/default/objects/MT_Visit_Report_Draft__c/MT_Visit_Report_Draft__c.object-meta.xml
<CustomObject>
    <description>Stores AI Agent phone call transcripts and processed visit report data for review and approval.</description>
    <label>Visit Report Draft</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Draft Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Report Drafts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>