force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with this visit report</description>
    <inlineHelpText>The customer account this visit report is about</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Report Drafts</relationshipLabel>
    <relationshipName>Visit_Report_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>