force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Configuration_Profile__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Profile__c</fullName>
    <defaultValue>&quot;Default&quot;</defaultValue>
    <description>Voice Assistant configuration profile used for processing</description>
    <inlineHelpText>The configuration profile that determines which objects and fields can be created</inlineHelpText>
    <label>Configuration Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>