force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who created this draft via AI Agent</description>
    <inlineHelpText>The sales person who called the AI Agent and created this visit report</inlineHelpText>
    <label>Created By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_Report_Drafts</relationshipName>
    <type>Lookup</type>
</CustomField>