force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Created_Task_IDs__c.field-meta.xml
<CustomField>
    <fullName>Created_Task_IDs__c</fullName>
    <label>Created Task IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Comma-separated list of Task IDs created from this visit report</description>
</CustomField>