force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if processing fails</description>
    <inlineHelpText>Technical error details if the flow failed to process this draft</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>