force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>Date and time when the draft was approved or rejected by the user</description>
    <inlineHelpText>When the user reviewed and processed this draft</inlineHelpText>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>