force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Prompt_Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Response_JSON__c</fullName>
    <description>JSON response from GenAI prompt template containing suggested records</description>
    <inlineHelpText>The structured JSON output from the AI prompt containing all suggested records for creation/update</inlineHelpText>
    <label>Prompt Response JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>