force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Reasoning__c</fullName>
    <description>AI reasoning for the suggested records</description>
    <inlineHelpText>The AI's explanation for why it suggested these specific records</inlineHelpText>
    <label>Reasoning</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>