force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Executive summary extracted from the AI prompt response</description>
    <inlineHelpText>A brief summary of the visit report and suggested records</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>