force-app/main/default/objects/MT_Visit_Report_Draft__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <description>Raw transcript from AI Agent phone call</description>
    <inlineHelpText>The complete conversation transcript from the AI Agent phone call</inlineHelpText>
    <label>Transcript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>