force-app/main/default/objects/MT_Visit_Report_Draft__c/validationRules/Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Required</fullName>
    <active>true</active>
    <description>Account is required for all visit report drafts</description>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Account is required. Please select the customer account for this visit report.</errorMessage>
</ValidationRule>