force-app/main/default/objects/MT_Visit_Report_Draft__c/validationRules/Transcript_Required_On_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Transcript_Required_On_Create</fullName>
    <active>true</active>
    <description>Transcript is required when creating a new draft</description>
    <errorConditionFormula>AND(
  ISNEW(),
  ISBLANK(Transcript__c)
)</errorConditionFormula>
    <errorDisplayField>Transcript__c</errorDisplayField>
    <errorMessage>Transcript is required when creating a visit report draft.</errorMessage>
</ValidationRule>